<resources>
    <string name="app_name">FeedMe</string>
    <string name="txt_usuario">Usuario:</string>
    <string name="txt_password">contraseña:</string>
    <string name="label_button_1">Aceptar</string>
    <string name="ayuda_1">Sin usuario, adelante:</string>
    <string name="ayuda_2">Aqui</string>
    <string name="ayuda_3">¿Olvido su contraseña?</string>
    <string name="ayuda_4">Recuperela</string>
    <string name="txt__new_usuario">Nuevo usuario</string>
    <string name="label_button_2">Registrar</string>
    <string name="txt__new_password">nuevo usuario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_referencia">Referencia</string>
</resources>
