<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center">
          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/feedme3"
              android:layout_marginTop="10dp"
              >
          </ImageView>
      </LinearLayout>
      #INICIO SESION
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:hint="@string/txt_usuario">
              <com.google.android.material.textfield.TextInputEditText
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp"
                  android:id="@+id/input_text_user"/>
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:hint="@string/txt_password">

              <com.google.android.material.textfield.TextInputEditText
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp"
                  android:id="@+id/input_text_pass"/>
          </com.google.android.material.textfield.TextInputLayout>
          <Button
              android:layout_marginTop="20dp"
              android:id="@+id/mi_button_login"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorPrimary"
              android:layout_margin="10dp"
              android:text="@string/label_button_1"/>

      </LinearLayout>
      #Texto opciones
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"

              android:gravity="center_horizontal">

              <TextView
                  android:layout_marginTop="10dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/ayuda_1">
              </TextView>
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/colorPrimary"
                  android:layout_marginTop="10dp"
                  android:id="@+id/label_bottom_new_registrer"
                  android:onClick="registrarUsuario">
              </TextView>
          </LinearLayout>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:gravity="center_horizontal">
              <TextView
                  android:layout_marginTop="10dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/ayuda_3">
              </TextView>
              <TextView
                  android:layout_marginTop="10dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/colorPrimary"
                  android:text="@string/ayuda_4"
                  android:onClick="recuperarUsuario">
              </TextView>
          </LinearLayout>
      </LinearLayout>
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>